Added auto_fstrim to volume spec (#1835)
Adds a new field auto_fstrim into volume spec

https://portworx.atlassian.net/browse/PWX-19340
