# api/server/sdk/api/api.swagger.json
@@ -1423,6 +1423,9 @@
             "format": "int64",
             "type": "integer"
           },
+          "auto_fstrim": {
+            "$ref": "#/components/schemas/apiRestoreParamBoolType"
+          },
           "cos": {
             "$ref": "#/components/schemas/apiCosType"
           },
@@ -4974,6 +4977,11 @@
             "format": "int64",
             "type": "integer"
           },
+          "auto_fstrim": {
+            "format": "boolean",
+            "title": "Autofstrim indicates that fstrim would be run on this volume automatically, without user intervention",
+            "type": "boolean"
+          },
           "block_size": {
             "description": "BlockSize for the filesystem.",
             "format": "int64",
@@ -5150,6 +5158,10 @@
             "format": "int64",
             "type": "integer"
           },
+          "auto_fstrim": {
+            "format": "boolean",
+            "type": "boolean"
+          },
           "cos": {
             "$ref": "#/components/schemas/apiCosType"
           },
@@ -5273,6 +5285,10 @@
       },
       "apiVolumeSpecUpdate": {
         "properties": {
+          "auto_fstrim": {
+            "format": "boolean",
+            "type": "boolean"
+          },
           "cos": {
             "$ref": "#/components/schemas/apiCosType"
           },
@@ -5495,7 +5511,7 @@
   },
   "info": {
     "title": "OpenStorage SDK",
-    "version": "0.101.14"
+    "version": "0.101.15"
   },
   "openapi": "3.0.0",
   "paths": {
